2000-02-23  Keith R Seitz  <kseitz@nwlink.com>

        * srctextwin.ith (_highlightAsmLine): Define new method.
        * srctextwin.itb (_highlightAsmLine): New method.
        (FillAssembly, FillMixed): Use _highlightAsmLine to highlight
        the current assembly line.	

Fri Feb  4 23:19:03 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* gdb/gdbtcl2: Directory renamed to gdb/gdbtk/library.
	
2000-01-12  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	* targetselection.itb (init_target_db): Add the word "serial" to
	the Angel target to make the distinction clear from the UDP connection.

2000-01-05  Fernando Nasser  <fnasser@totem.to.cygnus.com>

	From Dave Vogel (dave@lightsurf.com):
	* targetselection.itb (init_target_db, config_dialog): Add support
	for selecting a target running the Angel monitor (RDI protocol)
	over an UDP connection.
	* interface.tcl (set_target_name): Set hostname when target is RDI
	over UDP (see previous entry).

1999-12-15  Fernando Nasser  <fnasser@rtl.cygnus.com>

	* variables.tcl: UnEdit any fields open to edit before colapsing
	a tree branch (it was generating a Tcl exception and stack dump).

1999-09-29  James Ingham  <jingham@leda.cygnus.com>

	* prefs.tcl (pref_read): Convert env(HOME) to a win32 path BEFORE
	handing it to file join, so we won't look for a network drive.

1999-09-23  James Ingham  <jingham@leda.cygnus.com>

	* toolbar.tcl (GDBToolBar): Typo.
	(new_menu): Changed this to allow menus to be altered as well as
	added.
	(menu_exists): New method.
	(clear_menu): New method.
	(_load_src_images): Moved here from srcbar.tcl.  Added Attach &
	Detach classes.  This is all still kind of ill-factored.
	(In instance data): Made menu data arrays rather than dynamically
	constructed variables.

	* srcwin.itb (SrcWin::set_execution_status): Let gdb print the PC, 
	since Tcl's conversion may not be wide enough.

	* srctextwin.ith: initialize the Cname variable.

	* srctextwin.itb (SrcTextWin::location):